<resources>
    <string name="password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="auth">0123456789Xx</string>
    <string name="personal_show">个人秀</string>
    <string name="private_show">私密秀</string>
    <string name="no_data">附近暂无聊天主播</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="loading">加载中...</string>
    <string name="regiesting">注册中...</string>
    <string name="rechargeing">正在充值...</string>
    <string name="send">发送</string>
    <string name="upload_succeed">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="succeed">成功</string>
    <string name="exchange_succ">转换成功</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="woman">女</string>
    <string name="pwd">请输入密码</string>
    <string name="log_title">登录</string>
    <string name="log_register">注册</string>
    <string name="finish">完成</string>
    <string name="save_local">保存到本地</string>
    <string name="is_forget_password">忘记密码?</string>
    <string name="log_input_phone">请输入手机号</string>
    <string name="log_input_okphone">请输入正确的手机号</string>
    <string name="log_input_ver">请输入验证码</string>
    <string name="log_input_nick">请输入昵称</string>
    <string name="log_input_yqm">请输入您的邀请码(非必填)</string>
    <string name="log_input_yzm">请输入验证码</string>
    <string name="please_input_pwd">请输入6-16位登录密码</string>
    <string name="send_mess_suc">验证码已发送，请注意查收</string>
    <string name="log_aggre">登录代表您已同意</string>
    <string name="log_pro">快点视频服务及隐私条款</string>
    <string name="youbo_pro">《快点视频用户协议》</string>
    <string name="youbo_pro_title">快点视频用户协议</string>
    <string name="pwd1">密码</string>
    <string name="change_pwd1">修改密码</string>
    <string name="log_comple">完成</string>
    <string name="fgtpwd_title">忘记密码</string>
    <string name="fgtpwd_find_pwd_succeed">找回密码成功</string>
    <string name="input_new_phone">请输入新的手机号</string>
    <string name="pwd_not_match">两次密码输入不一致</string>
    <string name="main_audio_unable_to_live">未开启音频权限，无法进行直播!</string>
    <string name="main_camera_unable_to_live">未开启摄像头权限，无法进行直播!</string>
    <string name="main_camera_or_audio_unable_to_live">未开启摄像头或音频权限，无法进行直播!</string>
    <string name="main_look_at">在看</string>
    <string name="main_liveing">直播中</string>
    <string name="back">回放</string>
    <string name="main_hot">热门</string>
    <string name="main_new">最新</string>
    <string name="home_no_live_data">暂时还没有直播</string>
    <string name="home_no_earning_data">暂时没有收益</string>
    <string name="search_title">搜索</string>
    <string name="search_on_follow">已关注</string>
    <string name="contri_con">鸟巢</string>
    <string name="contri_time">分钟</string>
    <string name="letter_not_empty">请输入私信内容</string>
    <string name="phone_account">请输入手机号</string>
    <string name="phone_account_true">请输入正确手机号</string>
    <string name="phone">手机号:</string>
    <string name="code">验证码:</string>
    <string name="nick">昵&#160;&#160;&#160;&#160;称:</string>
    <string name="hint_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="mine_myaccount">我的账户</string>
    <string name="mine_my_fans">我的粉丝</string>
    <string name="mine_my_follow">我的关注</string>
    <string name="id_clip">ID号已复制到剪切板</string>
    <string name="get_mon">到账金额</string>
    <string name="str_clear_cache_title">清理缓存</string>
    <string name="str_clear_cache_info">是否清除缓存?</string>
    <string name="str_clear_cache_succ">清理成功</string>
    <string name="str_download_wait">正在下载中，请等待...</string>
    <string name="str_bind_phone">绑定手机号</string>
    <string name="set_pwd">设置密码</string>
    <string name="set_pwd_suc">设置密码成功！</string>
    <string name="str_my_control">我的场控</string>
    <string name="cancel_admin">取消场控</string>
    <string name="str_black_list">黑名单</string>
    <string name="str_help_tickl">帮助与反馈</string>
    <string name="str_exit_out">退出登录</string>
    <string name="str_exit">退出</string>
    <string name="str_edit_phone_title">修改手机号</string>
    <string name="str_alter_succeed">修改成功</string>
    <string name="edit_head_portrait">头像</string>
    <string name="edit_nick">昵称</string>
    <string name="edit_gender">性别</string>
    <string name="edit_secrecy">保密</string>
    <string name="edit_signature">签名</string>
    <string name="edit_position">所在地</string>
    <string name="edit_alter_nick">昵称</string>
    <string name="edit_user_nick">修改昵称</string>
    <string name="please_input_sign">请输入签名</string>
    <string name="edit_save_succeed">保存成功</string>
    <string name="edit_save_fail">保存失败</string>
    <string name="edit_input_nick">输入昵称</string>
    <string name="edit_select_date">选择日期</string>
    <string name="edit_alter_signature_title">个人签名</string>
    <string name="letter_ignore">忽略未读</string>
    <string name="my_let">我的私信</string>
    <string name="real_name">姓名</string>
    <string name="real_phone">手机号码</string>
    <string name="real_id_card">身份证号</string>
    <string name="share">分享</string>
    <string name="refill_succeed">支付成功!</string>
    <string name="refill_result_unknown">支付结果未知!</string>
    <string name="refill_fail">订单支付失败!</string>
    <string name="refill_repeat_request">重复请求!</string>
    <string name="refill_on_cancel">支付已取消!</string>
    <string name="send_one">送给了你1个</string>
    <string name="receive">收到</string>
    <string name="send_ta">赠送给</string>
    <string name="send_to">送给了</string>
    <string name="one">个</string>
    <string name="live_say_someting">说点什么</string>
    <string name="live_follow_succeed">关注成功</string>
    <string name="live_exit">确认退出直播间吗?</string>
    <string name="live_gift">礼物</string>
    <string name="live_count_down">连击</string>
    <string name="live_report">举报</string>
    <string name="live_start">开始直播</string>
    <string name="add_fri_tips">关注即可不错过TA的最新动态</string>
    <string name="readed">全部标为已读</string>
    <string name="end_live_time">直播时长</string>
    <string name="end_watch_num">观看人数</string>
    <string name="end_rec_prise">收到赞</string>
    <string name="back_stop">回放结束</string>
    <string name="account_repeat_login">您的账号与%1$s在另一台手机登录,如非本人操作,则密码可能已经泄露,建议修改密码。</string>
    <string name="delete_success">删除成功</string>
    <string name="follow_anchor">关注主播</string>
    <string name="follow_liveing">正在直播(</string>
    <string name="delete_msg_tip">确认删除消息？</string>
    <string name="delete_msg">删除消息</string>
    <string name="no_intro">你好像忘记了签名~</string>
    <string name="phone_verify">手机号验证</string>
    <string name="to_set">去设置</string>
    <string name="no_wifi">当前网络无WiFi,可能会被运营商收取流量费用</string>
    <string name="no_network">联网失败,请检查手机网络状态</string>
    <string name="incorr_idcard">请输入正确的身份证号码</string>
    <string name="bind_success">绑定成功！</string>
    <string name="user_exchange_pro">用户充值协议</string>
    <string name="not_find_file">文件没有找到</string>
    <string name="not_find_img">图片未找到</string>
    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="phone_num">手机号</string>
    <string name="search_hint">输入用户昵称或ID</string>
    <string name="search_music">输入歌曲/歌手</string>
    <string name="verify_phone_to_safe">验证手机号以保证您的账号安全</string>
    <string name="exchange_account">兑换账户</string>
    <string name="can_exchange_money">可兑换收益(元):</string>
    <string name="arrival_amount">到账金额</string>
    <string name="input_real_name">请输入您的真实姓名</string>
    <string name="input_real_phone">请输入您的手机号码</string>
    <string name="input_real_idcard">请输入您的身份证号码(选填)</string>
    <string name="upload_idcard_photo">请上传认证资料相片(选填)</string>
    <string name="idcard_posi">认证资料</string>
    <string name="idcard_nega">认证资料</string>
    <string name="idcard_handle">认证资料</string>
    <string name="idcard_hand_tip">本人手持证件照示例（证件照片与号码清晰可辨）</string>
    <string name="is_agree">是否同意</string>
    <string name="start_live_rule">《开播规则协议》</string>
    <string name="verify_phon">验证手机号</string>
    <string name="log_out_nitify">下线通知</string>
    <string name="ok">好</string>
    <string name="my_download">我的下载</string>
    <string name="empty_music">~还未下载任何歌曲~</string>
    <string name="music_hit"> 想唱什么就搜什么</string>
    <string name="other_get_way">其他获取方式</string>
    <string name="exch_with">用鸟巢兑换</string>
    <string name="not_search_about">没有搜索到相关信息</string>
    <string name="code_sended">验证码已发送至</string>
    <string name="copy">复制</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancel_follow">取消关注</string>
    <string name="day_rank">日榜</string>
    <string name="total_rank">总榜</string>
    <string name="close_live_notice">关闭某个人的开播提醒，不再收到TA的开播提醒</string>
    <string name="i_konw">我知道了</string>
    <string name="continue_play">继续播放</string>
    <string name="anchor_redbag">主播红包</string>
    <string name="log_use_ver">验证码登录</string>
    <string name="chat_with_anchor">hi,我是主播，快来跟我聊天吧</string>
    <string name="launch">发起</string>
    <string name="remove_black">移出黑名单</string>
    <string name="publish_live">发布了直播</string>
    <string name="clear_his">清除历史记录</string>
    <string name="redbag_finish">手慢了，红包派完了</string>
    <string name="look_redbag">查看大家手气</string>
    <string name="wait_rec">等待对方领取</string>
    <string name="not_get_redbag">抱歉，您未领取到红包。</string>
    <string name="direct_sned_redbag">收到的鸟蛋可以直接发红包</string>
    <string name="fans_con">粉丝贡献</string>
    <string name="fans_con_list">粉丝贡献榜</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_follow">我的关注</string>
    <string name="rec_prise">收到的赞</string>
    <string name="click_copy">（点击复制）</string>
    <string name="my_level">我的等级</string>
    <string name="my_auth">我的认证</string>
    <string name="account_detail">账单明细</string>
    <string name="help_and_feekback">帮助与反馈</string>
    <string name="i_have_feekback">我要反馈</string>
    <string name="you_may_love">你可能喜欢</string>
    <string name="more">更多</string>
    <string name="look_more">查看更多</string>
    <string name="followed_peo">关注的人</string>
    <string name="ta_fans">ta的粉丝</string>
    <string name="signa">个性签名</string>
    <string name="help">帮助</string>
    <string name="login">登录</string>
    <string name="regisiter">手机号注册</string>
    <string name="write_code">填写验证码</string>
    <string name="register_success">注册成功</string>
    <string name="edit_user_info">我的信息</string>
    <string name="not_audit">未认证</string>
    <string name="under_review">审核中</string>
    <string name="certified">已认证</string>
    <string name="certified_fail">认证失败</string>
    <string name="yuan">元</string>
    <string name="u_hao">ID:</string>
    <string name="u_hao_1">ID</string>
    <string name="care">关注</string>
    <string name="fans">粉丝</string>
    <string name="care_1">关注:</string>
    <string name="add_cancle_care">+关注</string>
    <string name="fans_1">粉丝:</string>
    <string name="send_gift">送礼:</string>
    <string name="receiver_gift">收礼:</string>
    <string name="my_profile">我的收益</string>
    <string name="my_account">我的账户</string>
    <string name="not_is_audio">您还不是主播哦~</string>
    <string name="my_certified">实名认证</string>
    <string name="help_feddback">帮助与反馈</string>
    <string name="withdraw_deposit">提现</string>
    <string name="withdraw_deposit_info">提现信息</string>
    <string name="withdraw_deposit_to_alipay">提现到支付宝</string>
    <string name="withdraw_deposit_account">提现账户</string>
    <string name="u_piao_number">金币数量</string>
    <string name="u_piao_account">银币余额</string>
    <string name="withdraw_deposit_all">全部提现</string>
    <string name="explain">说明:</string>
    <string name="to_apply_for_cash_withdrawals">申请提现</string>
    <string name="please_input_account">请选择到帐账户</string>
    <string name="oneself">单身</string>
    <string name="spinsterhood">未婚</string>
    <string name="married">已婚</string>
    <string name="privary">保密</string>
    <string name="delete">删除</string>
    <string name="blacklist">拉黑</string>
</resources>