<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/pageBg_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="?attr/text_color_333"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tv_galley"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="0.5dp"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="?attr/text_color_333"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="?attr/text_color_333"
        android:textSize="15sp" />

</LinearLayout>