<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/shap_white_radius_4"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/edit_alter_signature_title"
            android:textColor="?attr/text_color_333"
            android:textSize="@dimen/sp_15" />

        <com.hn.library.view.HnEditText
            android:id="@+id/et_nick"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginBottom="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_12"
            android:background="?attr/pageBg_color"
            android:hint="@string/please_input_sign"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="?attr/text_color_666"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/sp_15"
            app:content_length="32" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="?attr/pageBg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="?attr/text_color_333"
                android:textSize="@dimen/sp_15" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="?attr/pageBg_color" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ensure"
                android:textColor="@color/comm_text_color_main"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>