<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/item_bg_color">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/design_margin"
                    android:text="@string/real_name"
                    android:textColor="?attr/text_color_333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/apply_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="?attr/item_bg_color"
                    android:hint="@string/input_real_name"
                    android:maxLength="10"
                    android:paddingRight="@dimen/design_margin"
                    android:singleLine="true"
                    android:textColor="?attr/text_color_333"
                    android:textColorHint="@color/comm_text_color_black_s"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="0.5dp"
                android:layout_marginTop="0.5dp"
                android:background="?attr/item_bg_color"
                android:gravity="center_vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/design_margin"
                    android:text="@string/real_phone"
                    android:textColor="?attr/text_color_333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="?attr/item_bg_color"
                    android:hint="@string/input_real_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:paddingRight="@dimen/design_margin"
                    android:textColor="?attr/text_color_333"
                    android:textColorHint="@color/comm_text_color_black_s"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?attr/item_bg_color">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/design_margin"
                    android:text="@string/real_id_card"
                    android:textColor="?attr/text_color_333"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/apply_idcard_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="?attr/item_bg_color"
                    android:digits="@string/auth"
                    android:hint="@string/input_real_idcard"
                    android:paddingRight="@dimen/design_margin"
                    android:textColor="?attr/text_color_333"
                    android:textColorHint="@color/comm_text_color_black_s"
                    android:textSize="14sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/design_margin"
                android:paddingTop="15dp"
                android:text="@string/upload_idcard_photo"
                android:textColor="@color/comm_text_color_black_s"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/design_margin"
                android:layout_marginRight="@dimen/design_margin"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/auth_photo_bg">

                    <EditText
                        android:id="@+id/et_img_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_zheng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@drawable/my_camera"
                        android:text="@string/idcard_posi"
                        android:textColor="?attr/text_color_333"
                        android:textSize="12sp" />

                    <com.hn.library.view.FrescoImageView
                        android:id="@+id/apply_imgone_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/auth_photo_bg">

                    <EditText
                        android:id="@+id/et_img_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <com.hn.library.view.FrescoImageView
                        android:id="@+id/apply_imgtwo_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/tv_fan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@drawable/my_camera"
                        android:text="@string/idcard_nega"
                        android:textColor="?attr/text_color_333"
                        android:textSize="12sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/auth_photo_bg">

                    <EditText
                        android:id="@+id/et_img_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <com.hn.library.view.FrescoImageView
                        android:id="@+id/apply_imgthree_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/tv_handle_zheng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="@dimen/dp_10"
                        android:drawableTop="@drawable/my_camera"
                        android:text="@string/idcard_handle"
                        android:textColor="?attr/text_color_333"
                        android:textSize="12sp" />

                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/idcard_hand_tip"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/comm_text_size_s"
                android:visibility="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@mipmap/defaultidcardimage"
                android:visibility="gone" />




            <FrameLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/box_agree"
                        android:button="@null"
                        android:checked="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/is_agree"
                        android:textColor="@color/comm_text_color_black_s"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/tv_live_pro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_live_rule"
                        android:textColor="@color/comm_text_color_main"
                        android:textSize="11sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </FrameLayout>
            <TextView
                android:id="@+id/apply_ensure_btn"
                android:layout_width="140dp"
                android:layout_marginTop="50dp"
                android:layout_height="@dimen/dp_39"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/shap_radius_max_yellow"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/sublim"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>